fix: Keep loader at the center (avoid layout shift)

--- a/frontend/src/components/Loader/Loader.css
+++ b/frontend/src/components/Loader/Loader.css
@@ -1,10 +1,14 @@
 .loader-wrapper {
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
 
 @media (prefers-color-scheme: dark) {
